--- a/angular.json
+++ b/angular.json
@@ -27,7 +27,8 @@
             "inlineStyleLanguage": "scss",
             "assets": [
               "src/favicon.ico",
-              "src/assets"
+              "src/presentation/assets",
+              "src/presentation/assets/images"
             ],
             "styles": [
               "src/styles.scss"
@@ -90,7 +91,8 @@
             "inlineStyleLanguage": "scss",
             "assets": [
               "src/favicon.ico",
-              "src/assets"
+              "src/presentation/assets",
+              "src/presentation/assets/images"
             ],
             "styles": [
               "src/styles.scss"
